[tool.poetry]
name = "pricing-engine"
version = "0.0.2"
description = "Pricing Engine"
license = "Unlicense"
authors = ["DaRekaze <darekaze@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pricing_engine"},
    { include = "price_publisher"},
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
aiokafka = "^0.7.2"
websockets = "^10.3"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
asyncclick = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
